--- a/css/style.css
+++ b/css/style.css
@@ -1979,7 +1979,7 @@ a:focus {
 }
 
 .static-hero {
-  background: url("../images/slider/slide-1.jpg") center center/cover no-repeat local;
+  background: url("http://p0myo90fu.bkt.clouddn.com/slider/slide-1.jpg") center center/cover no-repeat local;
   width: 100%;
   height: 100%;
   position: absolute;
