--- a/sass/layout/_hero-slider.scss
+++ b/sass/layout/_hero-slider.scss
@@ -359,7 +359,7 @@
 
 
 .static-hero {
-	@include background-style("../images/slider/slide-1.jpg", center center, cover, no-repeat, local);
+	@include background-style("http://p0myo90fu.bkt.clouddn.com/slider/slide-1.jpg", center center, cover, no-repeat, local);
 	width: 100%;
 	height: 100%;
 	position: absolute;
