change bg music

--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -1,7 +1,7 @@
 /*---------------------------
 	Fonts
 ----------------------------*/
-@import url('https://fonts.googleapis.com/css?family=Dosis:400,600,700|Great+Vibes');
+@import url('https://fonts.cat.net/css?family=Dosis:400,600,700|Great+Vibes');
 
 // fonts
 $base-font: 'Dosis', sans-serif;
