--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ URL:            http://themeforest.net/user/themexriver
 /*---------------------------
 	Fonts
 ----------------------------*/
-@import url("https://fonts.googleapis.com/css?family=Dosis:400,600,700|Great+Vibes");
+@import url("https://fonts.cat.net/css?family=Dosis:400,600,700|Great+Vibes");
 /*--------------------------------------------------------------
 #0.1    Theme Reset Style
 --------------------------------------------------------------*/
