change bg music

--- a/css/style.css
+++ b/css/style.css
@@ -2007,7 +2007,7 @@ a:focus {
 #0.5	footer
 --------------------------------------------------------------*/
 .site-footer {
-  background: url("../images/footer-bg.jpg") center center/cover no-repeat local;
+  background: url("http://p0myo90fu.bkt.clouddn.com/%E5%B0%BE%E9%A1%B5%E8%83%8C%E6%99%AF.jpg") center center/cover no-repeat local;
   text-align: center;
   color: #fff;
   padding: 160px 0;
