--- a/sass/layout/_hero-slider.scss
+++ b/sass/layout/_hero-slider.scss
@@ -359,7 +359,7 @@
 
 
 .static-hero {
-	@include background-style("http://p0myo90fu.bkt.clouddn.com/slider/slide-1.jpg", center center, cover, no-repeat, local);
+	@include background-style("http://p0myo90fu.bkt.clouddn.com/bg/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20180103151500_%E5%89%AF%E6%9C%AC.jpg", center center, cover, no-repeat, local);
 	width: 100%;
 	height: 100%;
 	position: absolute;
